--- a/assets/scss/common-styles/pagetitles.scss
+++ b/assets/scss/common-styles/pagetitles.scss
@@ -3,10 +3,10 @@
         text-align: center;
         padding: 10px;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-weight: 400;
-        font-stretch: bold;
-        font-style: normal;
-        font-size: 30px;
+        font-weight: 300;
+        // font-stretch: bold;
+        // font-style: normal;
+        font-size: 50px;
         opacity: 80%;
         color: themed("logo-yellow");
         text-shadow:
