--- a/assets/scss/partials/home/mainswiper.scss
+++ b/assets/scss/partials/home/mainswiper.scss
@@ -47,7 +47,6 @@
             }
             
             .headline11 {
-                // top: calc(var(--viewable-height) / 5);
                 left: 50px;
                 // font-family: "Pacifico", serif;
                 // font-family: "Cedarville Cursive", serif;
@@ -123,8 +122,109 @@
             .button11:focus {
                 outline: none;
             }
-        }
 
+            .img21 {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            .headline21, .headline22, .button21 {
+                position: absolute;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+                padding: 10px;
+                z-index: 10;
+            }
+            
+            .headline21 {
+                left: 50px;
+                //font-family: "Pacifico", serif;
+                //font-family: "Cedarville Cursive", serif;
+                //font-family: "Playwrite ZA", serif;
+                // font-family: "Ingrid Darling", serif;
+                // font-optical-sizing: auto;
+                // font-weight: 400;
+                // font-stretch: bolder;
+                // font-style: normal;
+                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+                font-weight: 400;
+                font-stretch: normal;
+                font-style:normal;
+                font-size: 25px;
+                // opacity: 80%;
+                color: themed("logo-yellow");
+                text-shadow:
+                    -1px -1px 0 black,
+                    1px -1px 0 black,
+                    -1px 1px 0 black,
+                    1px 1px 0 black;
+                //font-size: calc(var(--viewable-height) / 8);
+                // font-size: 130px;// calc(var(--viewable-height) / 5);
+                opacity: 70%;
+                // color: themed("text-white");
+                text-shadow: 
+                -1px -1px 0 black, /* Oben links */
+                1px -1px 0 black, /* Oben rechts */
+                -1px  1px 0 black, /* Unten links */
+                1px  1px 0 black; /* Unten rechts */
+                line-height: 1;
+            }
+
+            .headline22 {
+                //top: calc(var(--viewable-height) / 5 +  var(--viewable-height) / 5);
+                left: 50px;
+                //font-family: "Pacifico", serif;
+                // font-family: "Cedarville Cursive", serif;
+                // font-family: "Playwrite ZA", serif;
+                font-family: "Ingrid Darling", serif;
+                // font-optical-sizing: auto;
+                font-weight: 400;
+                // font-stretch: bolder;
+                font-style: normal;
+                //font-size: calc(var(--viewable-height) / 8);
+                //font-size: 130px;// calc(var(--viewable-height) / 5);
+                opacity: 70%;
+                color: themed("text-white");
+                text-shadow: 
+                -1px -1px 0 black, /* Oben links */
+                1px -1px 0 black, /* Oben rechts */
+                -1px  1px 0 black, /* Unten links */
+                1px  1px 0 black; /* Unten rechts */
+                line-height: 1;
+            }
+
+            .button21 {
+                bottom: 20px;
+                right: 20px;
+                background: themed("logo-green");
+                border: 1px solid themed("text-main-menu");
+                border-radius: 50%;
+                color: themed("text-main-menu");
+                cursor: pointer;
+                font-size: 1em;
+                height: 120px;
+                width: 120px;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                text-transform: uppercase;
+                transition: transform 0.15s ease, box-shadow 0.15s ease;
+            }
+
+            .button21:hover {
+                transform: scale(1.1);
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            }
+            
+            .button21:active {
+                transform: scale(0.95);
+                box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            }
+            
+            .button21:focus {
+                outline: none;
+            }
+        }
     }
     
     // @media (min-width: 1260px) and (max-width: 1460px) {
@@ -176,13 +276,20 @@
     //         opacity: 90%;
     //     }
 
-        .mainswiper .swiper-slide .button11 {
-            bottom: 10px;
-            right: 10px;
-            height: 90px;
-            width: 90px;
-        }
+    .mainswiper .swiper-slide .button11 {
+        bottom: 10px;
+        right: 10px;
+        height: 90px;
+        width: 90px;
     }
+
+    .mainswiper .swiper-slide .button21 {
+        bottom: 10px;
+        right: 10px;
+        height: 90px;
+        width: 90px;
+    }
+}
     
     @media (max-width: 580px) {
         // .mainswiper .swiper-slide .headline11 {
@@ -198,6 +305,13 @@
         // }
 
         .mainswiper .swiper-slide .button11 {
+            bottom: 10px;
+            right: 10px;
+            height: 90px;
+            width: 90px;
+        }
+ 
+        .mainswiper .swiper-slide .button21 {
             bottom: 10px;
             right: 10px;
             height: 90px;
