--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1483,9 +1483,70 @@
       box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
     .light-theme .mainswiper .swiper-slide .button11:focus {
       outline: none; }
+    .light-theme .mainswiper .swiper-slide .img21 {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+    .light-theme .mainswiper .swiper-slide .headline21, .light-theme .mainswiper .swiper-slide .headline22, .light-theme .mainswiper .swiper-slide .button21 {
+      position: absolute;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+      padding: 10px;
+      z-index: 10; }
+    .light-theme .mainswiper .swiper-slide .headline21 {
+      left: 50px;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-weight: 400;
+      font-stretch: normal;
+      font-style: normal;
+      font-size: 25px;
+      color: #fcd116;
+      text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+      opacity: 70%;
+      text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+      /* Unten rechts */
+      line-height: 1; }
+    .light-theme .mainswiper .swiper-slide .headline22 {
+      left: 50px;
+      font-family: "Ingrid Darling", serif;
+      font-weight: 400;
+      font-style: normal;
+      opacity: 70%;
+      color: white;
+      text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+      /* Unten rechts */
+      line-height: 1; }
+    .light-theme .mainswiper .swiper-slide .button21 {
+      bottom: 20px;
+      right: 20px;
+      background: #007a5e;
+      border: 1px solid white;
+      border-radius: 50%;
+      color: white;
+      cursor: pointer;
+      font-size: 1em;
+      height: 120px;
+      width: 120px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      text-transform: uppercase;
+      transition: transform 0.15s ease, box-shadow 0.15s ease; }
+    .light-theme .mainswiper .swiper-slide .button21:hover {
+      transform: scale(1.1);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+    .light-theme .mainswiper .swiper-slide .button21:active {
+      transform: scale(0.95);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
+    .light-theme .mainswiper .swiper-slide .button21:focus {
+      outline: none; }
 
 @media (min-width: 580px) and (max-width: 1050px) {
   .light-theme .mainswiper .swiper-slide .button11 {
+    bottom: 10px;
+    right: 10px;
+    height: 90px;
+    width: 90px; }
+  .light-theme .mainswiper .swiper-slide .button21 {
     bottom: 10px;
     right: 10px;
     height: 90px;
@@ -1493,6 +1554,11 @@
 
 @media (max-width: 580px) {
   .light-theme .mainswiper .swiper-slide .button11 {
+    bottom: 10px;
+    right: 10px;
+    height: 90px;
+    width: 90px; }
+  .light-theme .mainswiper .swiper-slide .button21 {
     bottom: 10px;
     right: 10px;
     height: 90px;
@@ -1576,9 +1642,70 @@
       box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
     .dark-theme .mainswiper .swiper-slide .button11:focus {
       outline: none; }
+    .dark-theme .mainswiper .swiper-slide .img21 {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+    .dark-theme .mainswiper .swiper-slide .headline21, .dark-theme .mainswiper .swiper-slide .headline22, .dark-theme .mainswiper .swiper-slide .button21 {
+      position: absolute;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+      padding: 10px;
+      z-index: 10; }
+    .dark-theme .mainswiper .swiper-slide .headline21 {
+      left: 50px;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      font-weight: 400;
+      font-stretch: normal;
+      font-style: normal;
+      font-size: 25px;
+      color: #534504;
+      text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+      opacity: 70%;
+      text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+      /* Unten rechts */
+      line-height: 1; }
+    .dark-theme .mainswiper .swiper-slide .headline22 {
+      left: 50px;
+      font-family: "Ingrid Darling", serif;
+      font-weight: 400;
+      font-style: normal;
+      opacity: 70%;
+      color: black;
+      text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+      /* Unten rechts */
+      line-height: 1; }
+    .dark-theme .mainswiper .swiper-slide .button21 {
+      bottom: 20px;
+      right: 20px;
+      background: #032c22;
+      border: 1px solid rgba(211, 211, 211, 0.829);
+      border-radius: 50%;
+      color: rgba(211, 211, 211, 0.829);
+      cursor: pointer;
+      font-size: 1em;
+      height: 120px;
+      width: 120px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      text-transform: uppercase;
+      transition: transform 0.15s ease, box-shadow 0.15s ease; }
+    .dark-theme .mainswiper .swiper-slide .button21:hover {
+      transform: scale(1.1);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
+    .dark-theme .mainswiper .swiper-slide .button21:active {
+      transform: scale(0.95);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
+    .dark-theme .mainswiper .swiper-slide .button21:focus {
+      outline: none; }
 
 @media (min-width: 580px) and (max-width: 1050px) {
   .dark-theme .mainswiper .swiper-slide .button11 {
+    bottom: 10px;
+    right: 10px;
+    height: 90px;
+    width: 90px; }
+  .dark-theme .mainswiper .swiper-slide .button21 {
     bottom: 10px;
     right: 10px;
     height: 90px;
@@ -1586,6 +1713,11 @@
 
 @media (max-width: 580px) {
   .dark-theme .mainswiper .swiper-slide .button11 {
+    bottom: 10px;
+    right: 10px;
+    height: 90px;
+    width: 90px; }
+  .dark-theme .mainswiper .swiper-slide .button21 {
     bottom: 10px;
     right: 10px;
     height: 90px;
@@ -2235,10 +2367,8 @@
   text-align: center;
   padding: 10px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: 400;
-  font-stretch: bold;
-  font-style: normal;
-  font-size: 30px;
+  font-weight: 300;
+  font-size: 50px;
   opacity: 80%;
   color: #fcd116;
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; }
@@ -2255,10 +2385,8 @@
   text-align: center;
   padding: 10px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: 400;
-  font-stretch: bold;
-  font-style: normal;
-  font-size: 30px;
+  font-weight: 300;
+  font-size: 50px;
   opacity: 80%;
   color: #534504;
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; }
