verknüpfung mitgliedschaft verwalten

--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -153,7 +153,7 @@
                                     <a href="Helfen/MitgliedWerden">{{ T "tHGetMitglied" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "tHMitgliedService" }}</a>
+                                    <a href="Helfen/MitgliedschaftVerwalten">{{ T "tHMitgliedService" }}</a>
                                 </li>
                             </ul>
                         </div>
