--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -132,10 +132,10 @@
                             <img src="/img/Spenden.png" alt="Spenden">
                             <ul>
                                 <li>
-                                    <a href="#">{{ T "tHPatenschaften" }}</a>
+                                    <a href="Helfen/PateWerden">{{ T "tHPatenschaften" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "tHPatenschaftenService" }}</a>
+                                    <a href="Helfen/PatenschaftVerwalten">{{ T "tHPatenschaftenService" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "thDonate" }}</a>
