--- a/layouts/partials/home/mainswiper.html
+++ b/layouts/partials/home/mainswiper.html
@@ -6,7 +6,7 @@
                     <img src="/img/main-warmeMahlzeit.png" alt="main picture - warme Mahlzeit" class="img11">
                     <h3 id="js-headline11" class="headline11">{{ T "oneEuroADay" }}</h3>
                     <h3 id="js-headline12" class="headline12">{{ T "oneMeal" }}</h3>
-                    <button class="button11">{{ T "getPate" }}</button>
+                    <button class="button11" onclick="window.location.href='./Helfen/pateWerden';">{{ T "getPate" }}</button>
                 </div>
                 <div class="swiper-slide">
                     <img src="/img/main_campus.jpg" alt="main picture - Campus" class="img21">
