--- a/assets/scss/_default/home.scss
+++ b/assets/scss/_default/home.scss
@@ -58,8 +58,7 @@
         margin-left: -60px;
         margin-top: 30px;
         margin-right: 30px;
-        background-color: rgba(255, 255, 255, 0.956);
-        
+        background-color: themed(website-background);
     }
 
     .home-title {
