--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,21 +19,6 @@
 </html>
 
 {{ define "scripts" }}
-<script>
-
-  // var jsMain = document.getElementById("js-main");
-  // if (localStorage.getItem("darkMode") == "true") {
-  //   jsMain.className = "light-theme";
-  // } else {
-  //   jsMain.className = "dark-theme";
-  // }
-  // jsDarkMode.addEventListener("click", function() {
-  //     if (localStorage.getItem("darkMode") == "true") {
-  //         localStorage.setItem("darkMode", "false");
-  //     } else {
-  //         localStorage.setItem("darkMode", "true");
-  //     }
-  // })
-</script>
+<script></script>
 {{ end }}
 
