--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div id = "js-home" class="dark-theme">
+<div id = "js-home" class="light-theme">
   <div class="home-main">
   {{ partial "home/mainswiper" }}
     {{.Content}}
