--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,6 @@
 
 {{ define "main" }}
-  <div id = "js-list" class="dark-theme">
+  <div id = "js-list" class="light-theme">
     <div class="list">
       <a href="/" class="logo">
         <img class="img-logo" src="/img/logo.png" alt="Haus der Sonne">
