--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div id = "js-theme" class="dark-theme">
+  <div id = "js-theme" class="light-theme">
     <div id = "js-single" class="single">
       <a href="/" class="logo">
         <img class="img-logo" src="/img/logo.png" alt="Haus der Sonne">
