--- a/layouts/partials/common/footer.html
+++ b/layouts/partials/common/footer.html
@@ -1,4 +1,4 @@
-<div id = "js-footer" class="dark-theme">
+<div id = "js-footer" class="light-theme">
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-social-buttons">
@@ -30,7 +30,7 @@
                     </div>
                     <div class="donate Patenschaft">
                         <p>Eine Patenschaft sichert einem Kind die tägliche warme Mahlzeit:</p>
-                        <button class="button-patenschaft">Eine Patenschaft übernehmen</button>
+                        <button class="button-patenschaft" onclick="window.location.href='./Helfen/pateWerden';">Eine Patenschaft übernehmen</button>
                     </div>
                     <div class="donate Newsletter">
                         <!-- <p>Möchten Sie unseren Newsletter abonnieren?</p>
