--- a/layouts/partials/home/mainswiper.html
+++ b/layouts/partials/home/mainswiper.html
@@ -1,4 +1,4 @@
-<div id = "js-swipers" class="dark-theme">
+<div id = "js-swipers" class="light-theme">
     <section class="swipers">
         <div class="mainswiper swiper">
             <div id="js-img11" class="swiper-wrapper">
