--- a/assets/scss/_default/list.scss
+++ b/assets/scss/_default/list.scss
@@ -67,8 +67,7 @@
             margin-left: -60px;
             margin-top: 30px;
             margin-right: 30px;
-            background-color: rgba(255, 255, 255, 0.956);
-            
+            background-color: themed(website-background);
         }
 
         .list-title {
@@ -126,7 +125,6 @@
 
     @media (max-width: 840px) {
         .list {
-
             .list-container {
                 margin: 0 auto;
                 width: calc( #{$width-percent-of-screen} - 2px );
