--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -36,13 +36,18 @@ $themes: (
     footer-background: rgba(8,129,98, 1),
   ),
   dark: (
-    text-white: black,
+    text-white: grey,
     text-black: lightgrey,
-    text-main-menu: rgba(211, 211, 211, 0.829),
+    text-main-menu: grey,
     background-logo-white: rgb(185, 182, 149),
+    table-line: lightgrey,
     logo-green: rgb(3, 44, 34),
+    logo-green-60: rgba(3, 44, 34, 0.6),
     logo-yellow: rgb(83, 69, 4),
+    logo-yellow-60: rgba(83, 69, 4, 0.6),
+    logo-yellow-30: rgba(83, 69, 4, 0.3),
     logo-red: rgb(115, 11, 23),
+    logo-red-60: rgba(115, 11, 23, 0.6),
     website-background: rgb(87, 86, 81),
     footer-background: rgb(3, 44, 34),
   ),
