--- a/layouts/partials/common/header.html
+++ b/layouts/partials/common/header.html
@@ -1,4 +1,4 @@
-<div id = "js-header" class="dark-theme">
+<div id = "js-header" class="light-theme">
     <header class="header">
         <div class="header-container">
             <nav class="header-menu gray">
