--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -133,7 +133,7 @@
     position: absolute; }
   .light-theme .header .gray {
     font-size: calc( 100px * 0.6 * 0.25);
-    width: 100%;
+    width: calc(100% - 16px);
     margin-top: 0px;
     height: calc( 100px * 0.6);
     justify-content: right;
@@ -195,7 +195,7 @@
     position: absolute; }
   .dark-theme .header .gray {
     font-size: calc( 100px * 0.6 * 0.25);
-    width: 100%;
+    width: calc(100% - 16px);
     margin-top: 0px;
     height: calc( 100px * 0.6);
     justify-content: right;
@@ -400,7 +400,7 @@
 
 .dark-theme .mega-menu-container a {
   text-decoration: none;
-  color: rgba(211, 211, 211, 0.829);
+  color: grey;
   vertical-align: top; }
 
 .dark-theme .mega-menu-container .menu-title {
@@ -543,7 +543,7 @@
 
 .dark-theme .checkbtn {
   font-size: 1.3em;
-  color: rgba(211, 211, 211, 0.829);
+  color: grey;
   float: right;
   line-height: calc(100px / 2 - 1.05em / 2);
   margin-right: 0.5em;
@@ -558,6 +558,7 @@
     right: 0;
     margin-top: calc( 100px * 0.6);
     width: calc( 100% - 130px - 20px - 25px);
+    margin-right: 8px;
     background-color: #007a5e;
     transition: top .4s, opacity .3s;
     z-index: 2; }
@@ -686,6 +687,7 @@
     right: 0;
     margin-top: calc( 100px * 0.6);
     width: calc( 100% - 130px - 20px - 25px);
+    margin-right: 8px;
     background-color: #032c22;
     transition: top .4s, opacity .3s;
     z-index: 2; }
@@ -796,7 +798,7 @@
     width: 0; }
   .dark-theme .checkbtn {
     font-size: 1.3em;
-    color: rgba(211, 211, 211, 0.829);
+    color: grey;
     float: right;
     line-height: calc(100px / 2 - 1.05em / 2);
     margin-right: 0.5em;
@@ -983,7 +985,7 @@
 
 .dark-theme .footer {
   background-color: #575651;
-  color: black;
+  color: grey;
   font-family: "Calibri", sans-serif; }
 
 .dark-theme .footer-container {
@@ -1205,7 +1207,7 @@
   margin-left: -60px;
   margin-top: 30px;
   margin-right: 30px;
-  background-color: rgba(255, 255, 255, 0.956); }
+  background-color: #e3e2d4; }
 
 .light-theme .home-title {
   flex: 0.7;
@@ -1329,7 +1331,7 @@
   margin-left: -60px;
   margin-top: 30px;
   margin-right: 30px;
-  background-color: rgba(255, 255, 255, 0.956); }
+  background-color: #575651; }
 
 .dark-theme .home-title {
   flex: 0.7;
@@ -1581,6 +1583,7 @@
     width: 12px;
     height: 12px;
     margin: 0 5px;
+    background-color: rgba(83, 69, 4, 0.6);
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
@@ -1604,7 +1607,7 @@
       font-stretch: bolder;
       font-style: normal;
       opacity: 70%;
-      color: black;
+      color: grey;
       text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
       /* Unten rechts */
       line-height: 1; }
@@ -1614,7 +1617,7 @@
       font-weight: 400;
       font-style: normal;
       opacity: 70%;
-      color: black;
+      color: grey;
       text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
       /* Unten rechts */
       line-height: 1; }
@@ -1622,9 +1625,9 @@
       bottom: 20px;
       right: 20px;
       background: #032c22;
-      border: 1px solid rgba(211, 211, 211, 0.829);
+      border: 1px solid grey;
       border-radius: 50%;
-      color: rgba(211, 211, 211, 0.829);
+      color: grey;
       cursor: pointer;
       font-size: 1em;
       height: 120px;
@@ -1670,7 +1673,7 @@
       font-weight: 400;
       font-style: normal;
       opacity: 70%;
-      color: black;
+      color: grey;
       text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
       /* Unten rechts */
       line-height: 1; }
@@ -1678,9 +1681,9 @@
       bottom: 20px;
       right: 20px;
       background: #032c22;
-      border: 1px solid rgba(211, 211, 211, 0.829);
+      border: 1px solid grey;
       border-radius: 50%;
-      color: rgba(211, 211, 211, 0.829);
+      color: grey;
       cursor: pointer;
       font-size: 1em;
       height: 120px;
@@ -1945,6 +1948,7 @@
     width: 12px;
     height: 12px;
     margin: 0 5px;
+    background-color: rgba(83, 69, 4, 0.6);
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
@@ -1962,6 +1966,7 @@
     height: 100%;
     width: auto;
     object-fit: contain;
+    border-color: lightgrey;
     border-width: 2px;
     border-style: solid;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
@@ -2010,7 +2015,7 @@
     margin-left: -60px;
     margin-top: 30px;
     margin-right: 30px;
-    background-color: rgba(255, 255, 255, 0.956); }
+    background-color: #e3e2d4; }
   .light-theme .list .list-title {
     flex: 0.7;
     margin-top: 10px;
@@ -2127,7 +2132,7 @@
     margin-left: -60px;
     margin-top: 30px;
     margin-right: 30px;
-    background-color: rgba(255, 255, 255, 0.956); }
+    background-color: #575651; }
   .dark-theme .list .list-title {
     flex: 0.7;
     margin-top: 10px;
@@ -2342,6 +2347,7 @@
     width: 12px;
     height: 12px;
     margin: 0 5px;
+    background-color: rgba(83, 69, 4, 0.6);
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
@@ -2359,6 +2365,7 @@
     height: 100%;
     width: auto;
     object-fit: contain;
+    border-color: lightgrey;
     border-width: 2px;
     border-style: solid;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
@@ -2591,25 +2598,26 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); }
 
 .dark-theme .default-table thead th {
+  background: rgba(83, 69, 4, 0.6);
   padding: 5px 16px;
-  border-bottom: 0px solid;
+  border-bottom: 0px solid rgba(83, 69, 4, 0.6);
   position: sticky;
   top: 0;
   z-index: 1; }
 
 .dark-theme .default-table thead th:last-child {
   text-align: right;
-  border: 2px solid;
+  border: 2px solid rgba(83, 69, 4, 0.6);
   width: 120px; }
 
 .dark-theme .default-table tbody {
   display: block;
   overflow: hidden;
-  border: 2px solid; }
+  border: 2px solid lightgrey; }
 
 .dark-theme .default-table tbody td {
   padding: 8px 16px;
-  border: 1px solid;
+  border: 1px solid lightgrey;
   text-align: left;
   vertical-align: middle; }
 
@@ -2639,7 +2647,7 @@
   .dark-theme .default-table tbody td:last-child {
     width: auto;
     border-top: 0;
-    border-bottom: 3px solid;
+    border-bottom: 3px solid lightgrey;
     text-align: left; }
   .dark-theme .default-table thead th {
     border-top: 0;
@@ -2669,22 +2677,23 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
 
 .dark-theme .scrollable-table thead th {
+  background: rgba(83, 69, 4, 0.6);
   padding: 5px 16px;
-  border-bottom: 2px solid;
+  border-bottom: 2px solid rgba(83, 69, 4, 0.6);
   position: sticky;
   top: 0;
   z-index: 1; }
 
 .dark-theme .scrollable-table thead th:first-child {
-  border: 2px solid;
+  border: 2px solid rgba(83, 69, 4, 0.6);
   width: 100px; }
 
 .dark-theme .scrollable-table thead th:last-child {
-  border: 2px solid;
+  border: 2px solid rgba(83, 69, 4, 0.6);
   width: 120px; }
 
 .dark-theme .scrollable-table tbody {
-  border: 2px solid;
+  border: 2px solid lightgrey;
   display: block;
   max-height: 384px;
   overflow-y: auto;
@@ -2692,7 +2701,7 @@
 
 .dark-theme .scrollable-table tbody td {
   padding: 4px 16px;
-  border: 1px solid;
+  border: 1px solid lightgrey;
   text-align: left;
   vertical-align: middle;
   background-color: #575651; }
@@ -2729,7 +2738,7 @@
   .dark-theme .scrollable-table tbody td:last-child {
     width: auto;
     border-top: 0;
-    border-bottom: 3px solid;
+    border-bottom: 3px solid lightgrey;
     text-align: left; }
   .dark-theme .scrollable-table thead th {
     border-top: 0;
@@ -2928,8 +2937,8 @@
   padding: 8px;
   background-color: #032c22;
   border-radius: 3px;
-  border: 1px solid;
-  color: black;
+  border: 1px solid rgba(3, 44, 34, 0.6);
+  color: grey;
   cursor: pointer;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.2s ease-in-out;
@@ -2958,6 +2967,7 @@
 .dark-theme .img-centered {
   width: var(--image-width);
   margin-top: 10px;
+  border-color: lightgrey;
   border-width: 2px;
   border-style: solid;
   margin-bottom: 0px;
@@ -2969,6 +2979,7 @@
 .dark-theme .img-centered-half {
   width: calc(var(--image-width) / 2);
   margin-top: 10px;
+  border-color: lightgrey;
   border-width: 2px;
   border-style: solid;
   margin-bottom: 0px;
@@ -2980,8 +2991,10 @@
 .dark-theme .img-caption {
   display: block;
   width: var(--image-width);
+  border-color: rgba(83, 69, 4, 0.6);
   border-width: 2px;
   border-style: solid;
+  background-color: rgba(83, 69, 4, 0.6);
   padding: 5px 0px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -2990,8 +3003,10 @@
 .dark-theme .img-caption-half {
   display: block;
   width: calc(var(--image-width) / 2);
+  border-color: rgba(83, 69, 4, 0.6);
   border-width: 2px;
   border-style: solid;
+  background-color: rgba(83, 69, 4, 0.6);
   padding: 5px 0px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -3025,7 +3040,7 @@
 .dark-theme .combobox-summary {
   background-color: #575651;
   padding: 7px;
-  border: 1px solid;
+  border: 1px solid lightgrey;
   cursor: pointer;
   margin-top: 2px;
   margin-bottom: 2px;
@@ -3039,12 +3054,12 @@
   margin-right: 15px;
   padding-left: 5px;
   padding-right: 5px;
-  border: 1px solid; }
+  border: 1px solid lightgrey; }
 
 .dark-theme .profile-container {
   background-color: #575651;
   padding: 7px;
-  border: 5px solid;
+  border: 5px solid rgba(115, 11, 23, 0.6);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -3062,7 +3077,10 @@
     margin-left: auto; }
 
 .dark-theme .profile-container-supplied {
-  border: 2px solid; }
+  border: 2px solid rgba(3, 44, 34, 0.6); }
+
+.dark-theme .profile-container-selected {
+  background-color: rgba(3, 44, 34, 0.6); }
 
 .dark-theme input,
 .dark-theme select {
@@ -3070,7 +3088,7 @@
   text-align: left;
   border-radius: 3px;
   padding: 5px;
-  border: 1px solid;
+  border: 1px solid lightgrey;
   font-size: 18px;
   width: 90%;
   color: #032c22; }
